Mon Mar 21 17:27:15 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_orb_tests.lst:
        * tests/Bug_3942_Regression/Bug_3942_Regression.cpp:
        * tests/Bug_3942_Regression/Bug_3942_Regression.mpc:
        * tests/Bug_3942_Regression/Foo.idl:
        * tests/Bug_3942_Regression/run_test.pl:

          Adding regression test for bug 3942, not yet fixed.

Mon Mar 21 10:34:42 UTC 2011  Martin Corino  <corino_m@remedy.nl>

        * tao/DynamicInterface/Server_Request.cpp:

          Fixed typo in fix for deffered_reply() check.

Sun Mar 20 13:45:05 UTC 2011  Martin Corino  <corino_m@remedy.nl>

        * tao/DynamicInterface/Server_Request.cpp:
          Fixed problem with handling GIOP::LocateRequest type requests.
          For this type of request the incoming CDR stream does not exist
          and the reply should be deferred.

Fri Mar 18 19:52:21 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/IIOP_Connector.cpp:
        * tao/Transport_Connector.h:
        * tao/Transport_Connector.cpp:

          Fix for the parallel connect strategy. While processing a list
          of endpoints, it is possible that one successfully connects
          quickly enough that the rest of the list does not need to be
          evaluated. In that case, the cleanup logic was not being
          evaluated, leaving the base connector to hold on to stale
          nonblocking connection handlers. At best these are unused
          objects that linger until the connector is shutdown, and at
          worst they can eventually connect, leading to unnecessary
          network resource consumption.

Thu Mar 17 09:55:03 UTC 2011  Olli Savia  <ops@iki.fi>

        * orbsvcs/orbsvcs/FtRtEvent/Utils/UUID.cpp:
          Fixes due to ACE rand_r() changes.

Thu Mar 17 09:45:43 UTC 2011  Olli Savia  <ops@iki.fi>

        * orbsvcs/tests/EC_Mcast/EC_Mcast.h:
        * orbsvcs/tests/EC_Mcast/EC_Mcast.cpp:
          Fixes due to ACE rand_r() changes.
